Updated incorrect label on Environment field, updated init scripts to check prod vs Production

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -137,7 +137,7 @@ Metadata:
       DBStorageType:
         default: Database storage type
       Environment:
-        default: Production
+        default: Deployment Environment
       ExternalSubnets:
         default: External subnets *
       HostedZone:
