--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -131,7 +131,7 @@ Metadata:
       DBTimeBetweenEvictionRunsMillis:
         default: DB Time Between Eviction Runs
       Environment:
-        default: Production
+        default: Deployment Environment
       ExternalSubnets:
         default: External subnets *
       HostedZone:
