--- a/templates/JiraDataCenterSTGorDR.template.yaml
+++ b/templates/JiraDataCenterSTGorDR.template.yaml
@@ -190,7 +190,7 @@ Parameters:
     Description: Controls if the EC2 instances are assigned a public IP address
     Type: String
   CatalinaOpts:
-    Default: '-Datlassian.mail.senddisabled=true -Datlassian.mail.fetchdisabled=true -Datlassian.mail.popdisabled=true'
+    Default: ''
     Description: Pass in any additional jvm options to tune Catalina
     Type: String
   CidrBlock:
