--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1,9 +1,9 @@
 ---
-# bring up diffs between this file and the BitbucketDataCenter.template, and JiraDataCenter.template.
+# Bring up diffs between this file and the BitbucketDataCenter.template, and JiraDataCenter.template.
 # As a rule, we should work to minimize our diffs between these files as best we can, so that future changes are easy to make across all supported CloudFormation templates.
 # Using YAML as our file format will allow us to put a block comment at the top of the file saying exactly this.
 AWSTemplateFormatVersion: 2010-09-09
-Description: QS(5027) Atlassian Confluence Data Center Oct,19,2016
+Description: Atlassian Confluence Data Center
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -36,7 +36,6 @@ Metadata:
           default: Networking
         Parameters:
           - AssociatePublicIpAddress
-          - AutologinCookieAge
           - CidrBlock
           - ExternalSubnets
           - InternalSubnets
@@ -52,6 +51,7 @@ Metadata:
       - Label:
           default: Advanced (Optional)
         Parameters:
+          - AutologinCookieAge
           - ConfluenceDownloadUrl
           - DBSnapshotId
           - StartCollectd
@@ -145,9 +145,9 @@ Metadata:
       InternalSubnets:
         default: Internal subnets *
       JvmHeapOverride:
-        default: JVM Heap Size Override
+        default: Confluence Heap Size Override
       JvmHeapOverrideSynchrony:
-        default: 2g
+        default: Synchrony Heap Size Override
       KeyName:
         default: Key Name *
       SSLCertificateName:
@@ -188,7 +188,7 @@ Metadata:
         default: VPC *
 Parameters:
   AssociatePublicIpAddress:
-    Default: true
+    Default: false
     AllowedValues: [true, false]
     ConstraintDescription: Must be 'true' or 'false'.
     Description: Controls if the EC2 instances are assigned a public IP address
@@ -285,7 +285,6 @@ Parameters:
     Description: The version of Confluence to install
     Type: String
   CustomDnsName:
-    Default: ''
     Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
     Type: String
   DBInstanceClass:
@@ -416,11 +415,11 @@ Parameters:
     Type: List<AWS::EC2::Subnet::Id>
   JvmHeapOverride:
     Default: ''
-    Description: Override the default amount of Memory to allocate to the JVM for your instance type - set size in meg or gig e.g. 1024m or 1g
+    Description: Override the default amount of memory to allocate to the JVM for your instance type - set size in meg or gig e.g. 1024m or 1g
     Type: String
   JvmHeapOverrideSynchrony:
-    Default: '2g'
-    Description: Override the default amount of memory to allocoate to the JVM for Synchrony, for your instance type - set size in meg or gig e.g. 1024m or 1g.
+    Default: ''
+    Description: Override the default amount of memory to allocate to the JVM for Synchrony, for your instance type - set size in meg or gig e.g. 1024m or 1g.
     Type: String
   KeyName:
     Default: ''
@@ -540,7 +539,7 @@ Parameters:
     Description: Sets the protocol to handle incoming traffic
     Type: String
   TomcatProxyPort:
-    Default: 80
+    Default: 443
     Description: If this Connector is being used in a proxy configuration, configure this attribute to specify the server port to be returned for calls to request.getServerPort()
     Type: String
   TomcatRedirectPort:
@@ -548,12 +547,12 @@ Parameters:
     Description: For a non-ssl conenctor actioning a redirect to ssl URI, Catalina will automatically redirect the request to the port number specified here
     Type: String
   TomcatScheme:
-    Default: http
+    Default: https
     Description: The name of the protocol you wish to have returned, ie "https" for an SSL Connector
     Type: String
     AllowedValues: [http, https]
   TomcatSecure:
-    Default: false
+    Default: true
     Description: Set this attribute to true if you wish to have calls to request.isSecure() to return true for requests received by this Connector. Needed for ssl offloading.
     Type: String
   VPC:
@@ -774,7 +773,7 @@ Mappings:
       HVM64: ami-18200774
       HVMG2: NOT_SUPPORTED
     us-east-1:
-      HVM64: ami-6a426815
+      HVM64: ami-854841fa
       HVMG2: NOT_SUPPORTED
     us-east-2:
       HVM64: ami-a08eb6c5
@@ -783,7 +782,7 @@ Mappings:
       HVM64: ami-a05dbdc3
       HVMG2: NOT_SUPPORTED
     us-west-2:
-      HVM64: ami-ef84d597
+      HVM64: ami-466f373e
       HVMG2: NOT_SUPPORTED
 Resources:
   ConfluenceClusterNodeRole:
@@ -796,6 +795,8 @@ Resources:
             Principal:
               Service: [ec2.amazonaws.com]
             Action: ['sts:AssumeRole']
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
       Path: /
       Policies:
         - PolicyName: ConfluenceClusterNodePolicy
@@ -929,12 +930,13 @@ Resources:
                     - "ATL_RELEASE_S3_PATH=releases/confluence"
                     - "ATL_SSL_SELF_CERT_ENABLED=false"
             /etc/cfn/cfn-hup.conf:
-              content: !Join
-                - "\n"
-                -
-                  - "[main]"
-                  - !Sub ["region=${Region}", Region: !Ref "AWS::Region"]
-                  - !Sub ["stack=${StackId}", StackId: !Ref "AWS::StackId"]
+              content:
+                !Join
+                  - "\n"
+                  -
+                    - "[main]"
+                    - !Sub ["region=${Region}", Region: !Ref "AWS::Region"]
+                    - !Sub ["stack=${StackId}", StackId: !Ref "AWS::StackId"]
               mode: "000400"
               owner: root
               group: root
@@ -976,12 +978,16 @@ Resources:
             040_make_shared_home_dir:
               command: mkdir -p /media/atl/confluence/shared-home
               ignoreErrors: false
+            050_ensure_ssm:
+              command: yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
           services:
             sysvinit:
               cfn-hup:
                 enabled: true
                 ensureRunning: true
-                files: [/etc/cfn/cfn-hup.conf, /etc/cfn/hooks.d/cfn-auto-reloader.conf]
+                files:
+                  - /etc/cfn/cfn-hup.conf
+                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
               collectd:
                 !If [DoCollectd, {enabled: true, ensureRunning: true}, !Ref 'AWS::NoValue']
               rpcbind:
@@ -1196,6 +1202,8 @@ Resources:
             040_make_shared_home_dir:
               command: mkdir -p /media/atl/confluence/shared-home
               ignoreErrors: false
+            050_ensure_ssm:
+              command: yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
           services:
             sysvinit:
               cfn-hup:
@@ -1312,9 +1320,9 @@ Resources:
     Properties:
       HostedZoneName: !Ref HostedZone
       Comment: Route53 cname for the efs
-      Name: !Join ['.', [!Ref 'AWS::StackName', 'efs', !Ref 'HostedZone']]
+      Name: !If [ UseHostedZone, !Join ['.', [!Ref 'AWS::StackName', 'efs', !Ref 'HostedZone']], '']
       Type: CNAME
-      TTL: '900'
+      TTL: 900
       ResourceRecords:
         - !Join ['.', [!Ref ElasticFileSystem, 'efs', !Ref 'AWS::Region', 'amazonaws.com.']]
 # Database
