ITOPS-544 Removed unused configSets config

--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -878,11 +878,7 @@ Resources:
                 enabled: true
                 ensureRunning: true
                 packages:
-                  yum:
-                    - nfs-utils
-        configSets:
-          default:
-            - 0
+                  yum: [nfs-utils]
     Properties:
       AssociatePublicIpAddress: false
       BlockDeviceMappings:
