ITOPS-544 As requested by Confluence Server dev team, moved DelpoyEnvironment out of product setup section

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -11,6 +11,9 @@ Metadata:
           default: Confluence setup
         Parameters:
           - ConfluenceVersion
+      - Label:
+          default: Deployment information
+        Parameters:
           - DeployEnvironment
       - Label:
           default: Cluster nodes
