--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -12,6 +12,9 @@ Metadata:
         Parameters:
           - JiraProduct
           - JiraVersion
+      - Label:
+          default: Deployment information
+        Parameters:
           - DeployEnvironment
       - Label:
           default: Cluster nodes
