CONFSERVER-56233 Fix incorrect Ref syntax that causes Synchrony provisioning to fail if collectd is not started. Also made Ref syntax consistent to the short form.

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1114,7 +1114,7 @@ Resources:
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
                   collectd-disk: []
-              - Ref "AWS::NoValue"
+              - !Ref AWS::NoValue
           files:
             /etc/atl:
               mode: "000640"
