--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -1017,7 +1017,7 @@ Resources:
                 - "arn:aws:iam::${AccountId}:server-certificate/${SSLCertificateName}"
                 - AccountId: !Ref AWS::AccountId
                   SSLCertificateName: !Ref SSLCertificateName
-          - Ref: AWS::NoValue
+          - !Ref AWS::NoValue
       HealthCheck:
         Target: !If [UseContextPath, !Join ['', ['HTTP:', !Ref TomcatDefaultConnectorPort, !Ref TomcatContextPath, '/status']], !Join ['', ['HTTP:', !Ref TomcatDefaultConnectorPort, '/status']]]
         Timeout: 29
