ITOPS-591 remove configsets for single configs

--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -749,7 +749,7 @@ Resources:
     Metadata:
       Comment: ''
       'AWS::CloudFormation::Init':
-        '0':
+        config:
           packages:
             !If
               - DoCollectd
