--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -857,9 +857,7 @@ Resources:
       - DB
     Metadata:
       AWS::CloudFormation::Init:
-        configSets:
-          default: [1]
-        "1":
+        config:
           packages:
             !If
               - DoCollectd
@@ -1102,9 +1100,7 @@ Resources:
       - DB
     Metadata:
       AWS::CloudFormation::Init:
-        configSets:
-          default: [1]
-        "1":
+        config:
           packages:
             !If
               - DoCollectd
